force-app/main/default/objects/Events__c/fields/Event_Category__c.field-meta.xml
<CustomField>
    <fullName>Event_Category__c</fullName>
    <description
  >Categories that group events together based on size, pricing and/or deliverables. Used for event contract &amp; material management. Select all options that apply.</description>
    <inlineHelpText
  >Categories that group events together based on size, pricing and/or deliverables. Used for event contract &amp; material management. Select all options that apply.</inlineHelpText>
    <label>Event Category</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GT DGS Tier 1</fullName>
            </value>
            <value>
                <fullName>GT DGS Tier 2</fullName>
            </value>
            <value>
                <fullName>GT DGS Tier 3</fullName>
            </value>
            <value>
                <fullName>GT ITL Tier 1</fullName>
            </value>
            <value>
                <fullName>GT Cyber Summit Tier 1</fullName>
            </value>
            <value>
                <fullName>GT Cyber Summit Tier 2</fullName>
            </value>
            <value>
                <fullName>GT Cyber Summit Tier 3</fullName>
            </value>
            <value>
                <fullName>GT Emerging Tech</fullName>
            </value>
            <value>
                <fullName>GT Custom Levels / Pricing</fullName>
                <label>GT Custom</label>
            </value>
            <value>
                <fullName>CDG Custom Levels / Pricing</fullName>
                <label>CDG Custom</label>
            </value>
            <value>
                <fullName>CDE HE ITLF</fullName>
            </value>
            <value>
                <fullName>CDE Custom Levels / Pricing</fullName>
                <label>CDE Custom</label>
            </value>
            <value>
                <fullName>Insider</fullName>
            </value>
            <value>
                <fullName>w/Terrace</fullName>
            </value>
            <value>
                <fullName>w/Pavilion</fullName>
            </value>
            <value>
                <fullName>w/Cocktail Round</fullName>
            </value>
            <value>
                <fullName>Without Roundtable</fullName>
                <label>w/o Roundtable</label>
            </value>
            <value>
                <fullName>Without Conference Bag</fullName>
                <label>w/o Conference Bag</label>
            </value>
            <value>
                <fullName>Without Notebook</fullName>
                <label>w/o Notebook</label>
            </value>
            <value>
                <fullName>GT Large</fullName>
                <isActive>false</isActive>
                <label>GT Large</label>
            </value>
            <value>
                <fullName>GT Small</fullName>
                <isActive>false</isActive>
                <label>GT Small</label>
            </value>
            <value>
                <fullName>ITLF</fullName>
                <isActive>false</isActive>
                <label>ITLF</label>
            </value>
            <value>
                <fullName>With Cocktail Round</fullName>
                <isActive>false</isActive>
                <label>With Cocktail Round</label>
            </value>
            <value>
                <fullName>With RT Breakfast / Exhibitor</fullName>
                <isActive>false</isActive>
                <label>With RT Breakfast / Exhibitor</label>
            </value>
            <value>
                <fullName>With RT Lunch / Anchor</fullName>
                <isActive>false</isActive>
                <label>With RT Lunch / Anchor</label>
            </value>
            <value>
                <fullName>with Bob Bullock</fullName>
                <isActive>false</isActive>
                <label>with Bob Bullock</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>