force-app/main/default/objects/Events__c/fields/Event_Change_Log__c.field-meta.xml
<CustomField>
    <fullName>Event_Change_Log__c</fullName>
    <description
  >Temporary Holder of changes for use on email alerts</description>
    <label>Event Change Log</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>