force-app/main/default/objects/Events__c/fields/Event_Datasheet__c.field-meta.xml
<CustomField>
    <fullName>Event_Datasheet__c</fullName>
    <formula>case(Status__c,
&quot;Cancelled&quot;,&quot;&quot;,
HYPERLINK(&quot;https://cms.erepublic.com/common/events/more_info/&quot;&amp;Id,Datasheet_Nickname__c&amp;&quot; Datasheet&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Event Datasheet</label>
    <type>Text</type>
</CustomField>