force-app/main/default/objects/Events__c/fields/Event_Director_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Event_Director_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description
  >The director of the event who is responsible for it&apos;s overall execution.</description>
    <inlineHelpText
  >The director of the event who is responsible for it&apos;s overall execution.</inlineHelpText>
    <label>Event Director</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Events_and_Conferences3</relationshipName>
    <type>Lookup</type>
</CustomField>