force-app/main/default/objects/Events__c/fields/Event_Display_Name__c.field-meta.xml
<CustomField>
    <fullName>Event_Display_Name__c</fullName>
    <formula
  >MID(Name, FIND(&quot; - &quot;, Name) + 3, LEN(Name) - FIND(&quot; - &quot;, Name))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Event Display Name</label>
    <type>Text</type>
</CustomField>