force-app/main/default/objects/Events__c/fields/Event_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Event_End_Date__c</fullName>
    <description>This is the end date of the event.</description>
    <inlineHelpText>This is the end date of the event.</inlineHelpText>
    <label>Event End Date</label>
    <type>Date</type>
</CustomField>