force-app/main/default/objects/Events__c/fields/Event_Files_Link__c.field-meta.xml
<CustomField>
    <fullName>Event_Files_Link__c</fullName>
    <description>Links to an event&apos;s Files page.</description>
    <formula>IF(
  RecordTypeId = &quot;01214000000AUym&quot;,
  HYPERLINK(&quot;https://erepublic.lightning.force.com/lightning/r/SFL5_Projects__c/&quot;&amp;Id&amp;&quot;/related/Projects__r/view&quot;, &quot;View Project Files&quot; , &quot;_blank&quot;),
  HYPERLINK(&quot;https://erepublic.lightning.force.com/lightning/r/AttachedContentDocument/&quot;&amp;Id&amp;&quot;/related/AttachedContentDocuments/view&quot;, &quot;View Event Lists and Files&quot; , &quot;_blank&quot;)
)</formula>
    <label>Event Files Link</label>
    <type>Text</type>
</CustomField>