force-app/main/default/objects/Events__c/fields/Event_History_Count__c.field-meta.xml
<CustomField>
    <fullName>Event_History_Count__c</fullName>
    <inlineHelpText
  >The number of times the event has been held, including this year.</inlineHelpText>
    <label>Event History Count</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>