force-app/main/default/objects/Events__c/fields/Event_History_Type__c.field-meta.xml
<CustomField>
    <fullName>Event_History_Type__c</fullName>
    <inlineHelpText
  >[Annual = Consecutive]: Event was held each year without interruption.
[Historical = Non-Consecutive]: There were one or more gaps of at least one year between dates the event was held.</inlineHelpText>
    <label>Event History Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Annual</fullName>
            </value>
            <value>
                <fullName>Historical</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>