force-app/main/default/objects/Events__c/fields/Event_ID__c.field-meta.xml
<CustomField>
    <fullName>Event_ID__c</fullName>
    <description
  >Used to provide a unique ID for each event record so as to coordinate delivery.</description>
    <displayFormat>EV-{0000}</displayFormat>
    <inlineHelpText
  >Used to provide a unique ID for each event record so as to coordinate delivery.</inlineHelpText>
    <label>EVN</label>
    <type>AutoNumber</type>
</CustomField>