force-app/main/default/objects/Events__c/fields/Event_Id_Case_Safe__c.field-meta.xml
<CustomField>
    <fullName>Event_Id_Case_Safe__c</fullName>
    <description
  >Provides the full 18 character case safe version of the event Id for use on buttons, reports, etc (Example: Fire Packet)</description>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Event Id Case Safe</label>
    <type>Text</type>
</CustomField>