force-app/main/default/objects/Events__c/fields/Event_Logistics_Job_Order_Due__c.field-meta.xml
<CustomField>
    <fullName>Event_Logistics_Job_Order_Due__c</fullName>
    <label>Event / Logistics Signs Job Order Due</label>
    <type>Date</type>
</CustomField>