force-app/main/default/objects/Events__c/fields/Event_Logistics_Signs__c.field-meta.xml
<CustomField>
    <fullName>Event_Logistics_Signs__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Event / Logistics Signs</label>
    <type>Checkbox</type>
</CustomField>