force-app/main/default/objects/Events__c/fields/Event_Manager__c.field-meta.xml
<CustomField>
    <fullName>Event_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description
  >Specify the Event Manager (Custom Events &amp; Webinars) or the Logistics Contact (Standard Events).</description>
    <inlineHelpText
  >Specify the Event Manager (Custom Events &amp; Webinars) or the Logistics Contact (Standard Events).</inlineHelpText>
    <label>Event Manager / Logistics</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Events_and_Conferences1</relationshipName>
    <type>Lookup</type>
</CustomField>