force-app/main/default/objects/Events__c/fields/Event_Manager_Note_Last_Updated__c.field-meta.xml
<CustomField>
    <fullName>Event_Manager_Note_Last_Updated__c</fullName>
    <description
  >Date/Time stamp for the most recent Event Manager Note.</description>
    <label>Event Note Last Updated</label>
    <length>80</length>
    <type>Text</type>
</CustomField>