force-app/main/default/objects/Events__c/fields/Event_Manager_Notes_History__c.field-meta.xml
<CustomField>
    <fullName>Event_Manager_Notes_History__c</fullName>
    <description
  >Ticket #81824 - 3/12/2025 - LF: Updated to Event Note History. Previously used as &quot;Event Manager Note History&quot; 
This field is automatically populated with notes from the Event Manager Notes field.</description>
    <inlineHelpText
  >This field is automatically populated with notes from the Event Note field.</inlineHelpText>
    <label>Event Note History</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>