force-app/main/default/objects/Events__c/fields/Event_Note_Date__c.field-meta.xml
<CustomField>
    <fullName>Event_Note_Date__c</fullName>
    <label>Event Note Date</label>
    <type>Date</type>
</CustomField>