force-app/main/default/objects/Events__c/fields/Event_Quarter__c.field-meta.xml
<CustomField>
    <fullName>Event_Quarter__c</fullName>
    <description
  >This is the quarter of the year in which the event will take place.</description>
    <inlineHelpText
  >This is the quarter of the year in which the event will take place.</inlineHelpText>
    <label>Event Quarter</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Q1</fullName>
            </value>
            <value>
                <fullName>Q2</fullName>
            </value>
            <value>
                <fullName>Q3</fullName>
            </value>
            <value>
                <fullName>Q4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>