force-app/main/default/objects/Events__c/fields/Event_Series__c.field-meta.xml
<CustomField>
    <fullName>Event_Series__c</fullName>
    <inlineHelpText
  >This field is used in the Events Portal to group Events by Series name.</inlineHelpText>
    <label>Event Series</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CDG Events</fullName>
            </value>
            <value>
                <fullName>Cybersecurity Summits</fullName>
            </value>
            <value>
                <fullName>Digital Government Summits</fullName>
            </value>
            <value>
                <fullName>Emerging Tech; Data and AI</fullName>
            </value>
            <value>
                <fullName>Higher Education Events</fullName>
            </value>
            <value>
                <fullName>Industry Insider Events</fullName>
            </value>
            <value>
                <fullName>IT Leadership Forums</fullName>
            </value>
            <value>
                <fullName>K-12 Education Events</fullName>
            </value>
            <value>
                <fullName>CDG Program</fullName>
            </value>
            <value>
                <fullName>CDE Program</fullName>
            </value>
            <value>
                <fullName>GOV Program</fullName>
            </value>
            <value>
                <fullName>GT Program</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>