force-app/main/default/objects/Events__c/fields/Event_Series_Name__c.field-meta.xml
<CustomField>
    <fullName>Event_Series_Name__c</fullName>
    <description
  >Removes the year from the event name for use on reporting.</description>
    <formula>SUBSTITUTE(
IF(CONTAINS(Name,&quot;2030&quot;), SUBSTITUTE(Name, &quot; 2030&quot;, &quot;&quot;),
IF(CONTAINS(Name,&quot;2029&quot;), SUBSTITUTE(Name, &quot; 2029&quot;, &quot;&quot;),
IF(CONTAINS(Name,&quot;2028&quot;), SUBSTITUTE(Name, &quot; 2028&quot;, &quot;&quot;),
IF(CONTAINS(Name,&quot;2027&quot;), SUBSTITUTE(Name, &quot; 2027&quot;, &quot;&quot;),
IF(CONTAINS(Name,&quot;2026&quot;), SUBSTITUTE(Name, &quot; 2026&quot;, &quot;&quot;),
IF(CONTAINS(Name,&quot;2025&quot;), SUBSTITUTE(Name, &quot; 2025&quot;, &quot;&quot;),
IF(CONTAINS(Name,&quot;2024&quot;), SUBSTITUTE(Name, &quot; 2024&quot;, &quot;&quot;),
IF(CONTAINS(Name,&quot;2023&quot;), SUBSTITUTE(Name, &quot; 2023&quot;, &quot;&quot;),
IF(CONTAINS(Name,&quot;2022&quot;), SUBSTITUTE(Name, &quot; 2022&quot;, &quot;&quot;),
IF(CONTAINS(Name,&quot;2021&quot;), SUBSTITUTE(Name, &quot; 2021&quot;, &quot;&quot;),
IF(CONTAINS(Name,&quot;2020&quot;), SUBSTITUTE(Name, &quot; 2020&quot;, &quot;&quot;),
IF(CONTAINS(Name,&quot;2019&quot;), SUBSTITUTE(Name, &quot; 2019&quot;, &quot;&quot;),
IF(CONTAINS(Name,&quot;2018&quot;), SUBSTITUTE(Name, &quot; 2018&quot;, &quot;&quot;),
&quot;&quot;)))))))))))))
, &quot;K-12 &quot;, &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Event Series Name</label>
    <type>Text</type>
</CustomField>