force-app/main/default/objects/Events__c/fields/Event_Short__c.field-meta.xml
<CustomField>
    <fullName>Event_Short__c</fullName>
    <description
  >Event description which pulls into More Info Piece automation</description>
    <inlineHelpText
  >Event description which pulls into More Info Piece automation</inlineHelpText>
    <label>Event Short</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>