force-app/main/default/objects/Events__c/fields/Event_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Event_Start_Date__c</fullName>
    <description>This is the start date of the event.</description>
    <inlineHelpText>This is the start date of the event.</inlineHelpText>
    <label>Event Start Date</label>
    <type>Date</type>
</CustomField>