force-app/main/default/objects/Events__c/fields/Event_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Event_Start_Time__c</fullName>
    <description>This is the start time of the event.</description>
    <inlineHelpText>This is the start time of the event.</inlineHelpText>
    <label>Event Start Time</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>6:00 AM</fullName>
            </value>
            <value>
                <fullName>6:15 AM</fullName>
            </value>
            <value>
                <fullName>6:30 AM</fullName>
            </value>
            <value>
                <fullName>6:45 AM</fullName>
            </value>
            <value>
                <fullName>7:00 AM</fullName>
            </value>
            <value>
                <fullName>7:15 AM</fullName>
            </value>
            <value>
                <fullName>7:30 AM</fullName>
            </value>
            <value>
                <fullName>7:45 AM</fullName>
            </value>
            <value>
                <fullName>8:00 AM</fullName>
            </value>
            <value>
                <fullName>8:15 AM</fullName>
            </value>
            <value>
                <fullName>8:30 AM</fullName>
            </value>
            <value>
                <fullName>8:45 AM</fullName>
            </value>
            <value>
                <fullName>9:00 AM</fullName>
            </value>
            <value>
                <fullName>9:15 AM</fullName>
            </value>
            <value>
                <fullName>9:30 AM</fullName>
            </value>
            <value>
                <fullName>9:45 AM</fullName>
            </value>
            <value>
                <fullName>10:00 AM</fullName>
            </value>
            <value>
                <fullName>10:15 AM</fullName>
            </value>
            <value>
                <fullName>10:30 AM</fullName>
            </value>
            <value>
                <fullName>10:45 AM</fullName>
            </value>
            <value>
                <fullName>11:00 AM</fullName>
            </value>
            <value>
                <fullName>11:15 AM</fullName>
            </value>
            <value>
                <fullName>11:30 AM</fullName>
            </value>
            <value>
                <fullName>11:45 AM</fullName>
            </value>
            <value>
                <fullName>12:00 PM</fullName>
            </value>
            <value>
                <fullName>12:15 PM</fullName>
            </value>
            <value>
                <fullName>12:30 PM</fullName>
            </value>
            <value>
                <fullName>12:45 PM</fullName>
            </value>
            <value>
                <fullName>1:00 PM</fullName>
            </value>
            <value>
                <fullName>1:15 PM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>