force-app/main/default/objects/Events__c/fields/Event_Topic__c.field-meta.xml
<CustomField>
    <fullName>Event_Topic__c</fullName>
    <description
  >This is the field that should be filled in describing the topic of the event and any notes/copy relating to that topic or description.</description>
    <inlineHelpText
  >This is the field that should be filled in describing the topic of the event and any notes/copy relating to that topic or description.</inlineHelpText>
    <label>Event Topic</label>
    <type>TextArea</type>
</CustomField>